Make seen properties move to the bottom of the page

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "SSH+",
-    "version": "1.2.3",
+    "version": "1.2.4",
     "action": {
         "default_popup": "sshplus.html",
         "default_icon": "sshplus.png"
@@ -14,10 +14,10 @@
             "js": [
                 "scripts/loadChangeChecker.js",
                 "scripts/positionChecker.js",
-                "scripts/visitTracker.js",
                 "scripts/language.js",
                 "scripts/replies.js",
-                "scripts/offer.js"
+                "scripts/offer.js",
+                "scripts/visitTracker.js"
             ]
         }
     ]
