--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,13 @@
 {
     "manifest_version": 3,
     "name": "SSH+",
-    "version": "1.4.0",
+    "version": "1.5.0",
+    "background": {
+        "service_worker": "scripts/background/storageGetter.js"
+    },
     "permissions": [
-        "tabs"
+        "tabs",
+        "storage"
     ],
     "action": {
         "default_popup": "sshplus.html",
