--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "SSH+",
-    "version": "1.6.2",
+    "version": "1.7.0",
     "background": {
         "service_worker": "scripts/background/storageManager.js"
     },
@@ -27,6 +27,7 @@
                 "scripts/content/genderFilter.js",
                 "scripts/content/visitTracker.js",
                 "scripts/content/cityFilter.js",
+                "scripts/content/dateSorter.js",
                 "scripts/content/popupHandler.js"
             ]
         }
